startupdir = ${bindir}
startup_in_files = kunor.in
startup_SCRIPTS = $(startup_in_files:.in=)

imagesdir = ${datadir}/icons/hicolor/scalable/apps
images_DATA = kunor.svg

desktopdir = ${datadir}/applications
desktop_in_files = kunor.desktop.in
desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)

EXTRA_DIST = kunor.in kunor.svg kunor.desktop.in kunor.desktop
